--- a/backend/test.html
+++ b/backend/test.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://github.com/login/oauth/authorize?client_id=4f38c3d35fb9b8924f85&redirect_uri=http://localhost:3001/callback">GitHub 아이디로 로그인</a>
+    <a href="https://github.com/login/oauth/authorize?client_id=4f38c3d35fb9b8924f85&redirect_uri=http://localhost:3001/callback/github">GitHub 아이디로 로그인</a>
     <a href="https://github.com/login/oauth/authorize?client_id=4f38c3d35fb9b8924f85&redirect_uri=http://localhost:3001/callback">Google 아이디로 로그인</a>
     <a href="https://github.com/login/oauth/authorize?client_id=4f38c3d35fb9b8924f85&redirect_uri=http://localhost:3001/callback">Naver 아이디로 로그인</a>
     <a href="https://github.com/login/oauth/authorize?client_id=4f38c3d35fb9b8924f85&redirect_uri=http://localhost:3001/callback">Kakao 아이디로 로그인</a>
