--- a/backend/test.html
+++ b/backend/test.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="google-signin-client_id" content="14050797265-gchj4gpfqu6fmdet41v1g34mc53hdoic.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body>
     <a href="https://github.com/login/oauth/authorize?client_id=4f38c3d35fb9b8924f85&redirect_uri=http://localhost:3001/callback/github">GitHub 아이디로 로그인</a>
-    <a href="https://github.com/login/oauth/authorize?client_id=4f38c3d35fb9b8924f85&redirect_uri=http://localhost:3001/callback">Google 아이디로 로그인</a>
+    <br>
+    <a href="https://accounts.google.com/o/oauth2/v2/auth?client_id=14050797265-gchj4gpfqu6fmdet41v1g34mc53hdoic.apps.googleusercontent.com&redirect_uri=http://localhost:3001/callback/google&response_type=code&scope=profile">Google 아이디로 로그인</a>
+    <br>
     <a href="https://github.com/login/oauth/authorize?client_id=4f38c3d35fb9b8924f85&redirect_uri=http://localhost:3001/callback">Naver 아이디로 로그인</a>
+    <br>
     <a href="https://github.com/login/oauth/authorize?client_id=4f38c3d35fb9b8924f85&redirect_uri=http://localhost:3001/callback">Kakao 아이디로 로그인</a>
 </body>
 </html>
