--- a/backend/test.html
+++ b/backend/test.html
@@ -9,9 +9,29 @@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 </head>
 <body>
-    <a href="https://github.com/login/oauth/authorize?client_id=4f38c3d35fb9b8924f85&redirect_uri=http://localhost:3001/callback/github">GitHub 아이디로 로그인</a>
+    <a
+        href="https://github.com/login/oauth/authorize?client_id=4f38c3d35fb9b8924f85&redirect_uri=http://localhost:3001/callback/github">
+        GitHub 아이디로 로그인(로컬)</a>
     <br>
-    <a href="https://accounts.google.com/o/oauth2/v2/auth?client_id=14050797265-gchj4gpfqu6fmdet41v1g34mc53hdoic.apps.googleusercontent.com&redirect_uri=http://localhost:3001/callback/google&response_type=code&scope=profile">Google 아이디로 로그인</a>
+    <a
+        href="https://github.com/login/oauth/authorize?client_id=2d34711451a62f8f967d&redirect_uri=http://i5a203.p.ssafy.io:3001/callback/github">
+        GitHub 아이디로 로그인</a>
+    <br>
+    <a
+        href="https://accounts.google.com/o/oauth2/v2/auth?client_id=14050797265-nu58ufdepph4jhs0env8smngev1labgv.apps.googleusercontent.com&redirect_uri=http://localhost:3001/callback/google&response_type=code&scope=profile">
+        Google 아이디로 로그인(로컬)</a>
+    <br>
+    <a
+        href="https://accounts.google.com/o/oauth2/v2/auth?client_id=14050797265-gchj4gpfqu6fmdet41v1g34mc53hdoic.apps.googleusercontent.com&redirect_uri=http://i5a203.p.ssafy.io:3001/callback/google&response_type=code&scope=profile">
+        Google 아이디로 로그인</a>
+    <br>
+    <a
+        href="https://kauth.kakao.com/oauth/authorzie?client_id=e1c7c1ec9f4622a12f202d6ffa590647&redirect_uri=http://localhost:3001/callback/kakao&response_type=code">
+        Kakao 아이디로 로그인(로컬)</a>
+    <br>
+    <a
+        href="https://kauth.kakao.com/oauth/authorzie?client_id=c765ccaf81f7ec64ac9adacbe5f8beb7&redirect_uri=http://i5a203.p.ssafy.io:3001/callback/kakao&response_type=code">
+        Kakao 아이디로 로그인</a>
     <br>
 </body>
 </html>
