edit kakao social login

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -23,7 +23,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:300,400,500,700,900&display=swap" rel="stylesheet" />
-  <title>React App</title>
+  <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+  <script>Kakao.init("87ab4b4940ba61709cfdb73203390ce9");</script>
+  <title>Ref:Reci</title>
 </head>
 
 <body>
